--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -27,7 +27,7 @@
             </div>
         </section>
         {#Blogs#}
-        <span class="fs-3 fw-medium container">Bloglar {{ blogs.count }} ta</span>
+        <span class="fs-3 fw-medium container">There are {{ blogs.count }} blogs </span>
         <a class="btn btn-outline-success float-end" href="{% url 'create' %}">+ Add Blog</a>
         <div class="album py-5 bg-body-tertiary mt-3">
             <div class="container">
