--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="{% url 'test_email' %}">Send Mail</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -85,7 +85,7 @@
         {% elif message.tags == 'warning' %}
             <i class="bi bi-exclamation-triangle-fill"></i>
         {% endif %}
-        <strong>{{ message.tags|upper}}: </strong> {{ message }}
+        <strong>{{ message.tags|upper }}: </strong> {{ message }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 {% endfor %}
