like,dislike,comments,edit,replay,delete

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -2,18 +2,19 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    Password Rest
+    Password Reset
 {% endblock %}
 
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <span class="fs-3 text-primary"> Password Reset </span>
+            <span class="fs-3 text-primary">Password Reset</span>
         </div>
+
         <div class="card-body">
             <form method="POST">
                 {% csrf_token %}
-                {{ form | crispy }}
+                {{ form|crispy }}
                 <button type="submit" class="btn btn-primary">Send Email</button>
             </form>
         </div>
