--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -2,18 +2,19 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-Password Rest
+    Password Reset
 {% endblock %}
 
 {% block content %}
-<div class="card">
-    <div class="card-header">
-        <span class="fs-3 text-primary"> Send mail successfully! </span>
-    </div>
-    <div class="card-body">
-        <div class="alert alert-warning" role="alert">
-           Biz emailga ma'lumat yubordek,tekshirib ko'ring!
+    <div class="card">
+        <div class="card-header">
+            <span class="fs-3 text-primary">Send mail successfully!</span>
+        </div>
+
+        <div class="card-body">
+            <div class="alert alert-warning" role="alert">
+                Biz emailga ma'lumot yubordik, tekshirib ko'ring!
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
