--- a/templates/mail/send_mail_success.html
+++ b/templates/mail/send_mail_success.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-secondary" role="alert">
         Email muvoffaqiyatli yuborildi!
     </div>
 {% endblock %}
