--- a/templates/blog/create.html
+++ b/templates/blog/create.html
@@ -6,6 +6,10 @@
     Create
 {% endblock %}
 
+{% block header %}
+    {{ form.media }}
+{% endblock %}
+
 {% block content %}
     <div class="card">
         <div class="card-header">
