--- a/templates/blog/update.html
+++ b/templates/blog/update.html
@@ -6,6 +6,9 @@
     Update
 {% endblock %}
 
+{% block header %}
+    {{ form.media }}
+{% endblock %}
 
 {% block content %}
     <div class="card">
